--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Web Ray Tracer",
   "main": "index.js",
   "devDependencies": {
+    "@types/stats.js": "^0.17.0",
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.3",
     "webpack": "^5.72.0",
@@ -21,5 +22,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {}
+  "bugs": {},
+  "dependencies": {
+    "stats.js": "^0.17.0"
+  }
 }
